--- a/TwentyandAbove/app/src/main/res/layout/activity_main.xml
+++ b/TwentyandAbove/app/src/main/res/layout/activity_main.xml
@@ -77,12 +77,14 @@
             android:layout_height="wrap_content"
             android:text="@string/default_lesson"
             android:id="@+id/lessonTextView"
+            android:fontFamily="sans-serif-light"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp"/>
+            android:paddingRight="20dp"
+            android:textColor="@android:color/black" />
 
     </ScrollView>
 
