--- a/TwentyandAbove/app/src/main/res/values/colors.xml
+++ b/TwentyandAbove/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#E51D1D</color>
+    <color name="colorPrimaryLight">#3947cc</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#F40000</color>
+    <color name="colorDarkNavy">#1C2877</color>
 </resources>
